--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, PingFang SC, Hiragino Sans GB, Microsoft YaHei, sans-serif;
+  font-family: apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    PingFang SC, Hiragino Sans GB, Microsoft YaHei, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -39,17 +40,24 @@ h1 {
 #canvas {
   border-radius: 8px;
   border: 1px solid #bbb;
-  max-width: 100%;
+  width: 100%;
+  max-width: 900px;
 }
 
-@media (max-width: 900px){
-  .canvas-wrapper{
+#imageStep {
+  margin-left: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+@media (max-width: 900px) {
+  .canvas-wrapper {
     aspect-ratio: 900/250;
   }
 }
 
-@media (min-width: 900px){
-  .canvas-wrapper{
+@media (min-width: 900px) {
+  .canvas-wrapper {
     height: 250px;
     width: 100%;
   }
